system init fixes